Insert basic information for Project Management and Technologies

--- a/www/kerbit/docs/project_management.tex
+++ b/www/kerbit/docs/project_management.tex
@@ -17,6 +17,8 @@
 
 \section{Section}
 
+Github, Gitlab, Slack, TeamCity (Build?), Travis, Facebook Messenger
+
 \subsection{subsection} 
 
 \end{document}
