Add draft legal issues document

--- a/www/kerbit/docs/legal_issues.tex
+++ b/www/kerbit/docs/legal_issues.tex
@@ -17,6 +17,10 @@
 
 \section{Section}
 
+None, given that we:
+Mention that we're MIT Licensed (Meteor, etc)
+Some other stuff (FontAwesome)
+
 \subsection{subsection} 
 
 \end{document}
