[PB] Finish legal issues doc

--- a/www/kerbit/docs/legal_issues.tex
+++ b/www/kerbit/docs/legal_issues.tex
@@ -1,7 +1,5 @@
 \documentclass[a4wide, 11pt]{article}
 \usepackage{a4, fullpage}
-\setlength{\parskip}{0.3cm}
-\setlength{\parindent}{0cm}
 
 \begin{document}
 
@@ -15,12 +13,50 @@
 
 \clearpage
 
-\section{Section}
+\section{Libraries}
 
-None, given that we:
-Mention that we're MIT Licensed (Meteor, etc)
-Some other stuff (FontAwesome)
+\begin{center}
+	\begin{tabular}{ |c|c|c| } 
+		\hline
+		\textbf{Library} & \textbf{Licence} \\
+		\hline 
+		Meteor & MIT \\ 
+		\hline
+		Meteor packages & MIT \\ 
+		\hline
+		Meteor iOS & Freeware \\ 
+		\hline
+		Mocha & MIT \\ 
+		\hline
+		JQuery & MIT \\ 
+		\hline
+		Bootstrap & MIT \\ 
+		\hline
+		Materialize & MIT \\ 
+		\hline
+		Font-Awesome & SIL OFL \\ 
+		\hline
+		Google Maps & Freeware \\ 
+		\hline
+	\end{tabular}
+\end{center}
 
-\subsection{subsection} 
+\section{Code}
+
+Our code is licenced under the MIT agreement. This means it is free to use, copy, modify, merge, publish, distribute, sublicence and/or sell. Note this includes the right to link it with code using other licences.
+
+\section{Pictures}
+
+All pictures used in the browser version of our application are our property (photoshop projects or original photographs). The iOS application does not contain any media so far.
+
+\section{Other issues}
+
+\subsection{Release version}
+
+If Kerb.It was ever released, contract law would have to apply to all users and we would have to deal with taxes.
+
+\subsection{Testing frameworks and VCS}
+
+Teamcity, Travis, Git, etc. need no further attention as they do not modify the final product.
 
 \end{document}
