--- a/www/kerbit/docs/technologies.tex
+++ b/www/kerbit/docs/technologies.tex
@@ -1,5 +1,7 @@
 \documentclass[a4wide, 11pt]{article}
 \usepackage{a4, fullpage}
+\usepackage{graphicx}
+\usepackage{hyperref}
 \setlength{\parskip}{0.3cm}
 \setlength{\parindent}{0cm}
 
@@ -15,17 +17,27 @@
 
 \clearpage
 
-\section{Section}
+\section{Language choices}
 
-HTML
-CSS
+\begin{itemize}
+	\item \textbf{HTML} - Using version 5 for standardization and consistency, improved semantics and better features.
+	\item \textbf{CSS} - We are using Twitter Bootstrap 3 extended with Materialize's Sass preprocessor capabilities.
+	\item \textbf{JavaScript} - Meteor (see below) and underlying Node.js are written in JavaScript, so it makes sense to use it.
+	\item \textbf{Swift} - Most viable and widely preferred choice for iOS application programming.
+\end{itemize}
 
-Javascript
-Meteor
-Mongo
+\section{Technology choices}
 
-Swift
+\begin{itemize}
+	\item \textbf{Meteor} - Advanced, extensible, reactive JS-based web application framework. Routing is done via Flow Router (reliability), front-end rendering via Blaze (complex templating).
+	\item \textbf{MongoDB} - Meteor is configured to use MongoDB by default. JSON documents are also very easy to inspect and test during debug sessions.
+	\item \textbf{XCode} - Standard, fully fledged Swift IDE, no real competitors.
+\end{itemize}
 
-\subsection{subsection} 
+\section{Build server}
+
+\url{teamcity.kerbit.co.uk} (login required). Builds automatically deploy to live server if all tests pass.\\
+Screen-shot:
+% \includegraphics{tests}
 
 \end{document}
