Add pictures and text to system architecture diagram

--- a/www/kerbit/docs/system_architecture_diagram.tex
+++ b/www/kerbit/docs/system_architecture_diagram.tex
@@ -17,6 +17,15 @@
 
 \section{Section}
 
-\subsection{subsection} 
+\includegraphics{system_arch_diagram}
+\includegraphics{folder_structure}
+
+\subsection{API Methods} 
+\begin{itemize}
+  \item $makeRequest$
+  \item $makeOffer$
+  \item $acceptOffer$
+  \item $leaveFeedback$
+\end{itemize}
 
 \end{document}
