Add pictures to project management doc

--- a/www/kerbit/docs/project_management.tex
+++ b/www/kerbit/docs/project_management.tex
@@ -17,7 +17,11 @@
 
 \section{Section}
 
-Github, Gitlab, Slack, TeamCity (Build?), Travis, Facebook Messenger
+Github, Gitlab, Slack, TeamCity, Travis, Facebook Messenger
+
+\includegraphics{slack1}
+\includegraphics{slack2}
+\includegraphics{slack3}
 
 \subsection{subsection} 
 
