finished system arch

--- a/www/kerbit/docs/system_architecture_diagram.tex
+++ b/www/kerbit/docs/system_architecture_diagram.tex
@@ -1,5 +1,6 @@
 \documentclass[a4wide, 11pt]{article}
 \usepackage{a4, fullpage}
+\usepackage{graphicx}
 \setlength{\parskip}{0.3cm}
 \setlength{\parindent}{0cm}
 
@@ -15,10 +16,10 @@
 
 \clearpage
 
-\section{Section}
+\section{System architecture diagram and folder structure}
 
-\includegraphics{system_arch_diagram}
-\includegraphics{folder_structure}
+\includegraphics[scale=0.2]{system_arch_diagram}\\
+\includegraphics[scale=0.3]{folder_structure}
 
 \subsection{API Methods} 
 \begin{itemize}
